update portfolio link

--- a/projects.html
+++ b/projects.html
@@ -254,10 +254,10 @@
             </ul>
             <p><br></p>
             <button type="button" class="btn-dark-outline"
-                    onclick="window.location.href='https://boring-curie-b2b112.netlify.app'">Live site
+                    onclick="window.location.href='https://abirelhalimi.me'">Live site
             </button>
             <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/portfolio'">Github repo
+                    onclick="window.location.href='https://github.com/abirelhalimi/abirelhalimi.github.io'">Github repo
             </button>
 
         </div>
