--- a/resume.html
+++ b/resume.html
@@ -65,7 +65,7 @@
             <h2>Education</h2>
             <div class="event">
                 <h3>Software Engineering</h3>
-                <h4>National School for Computer Science</h4>
+                <h4>National School for Computer Science (ENSIAS)</h4>
                 <span>2017 - Present</span>
                 <p>Three years program with the goal to obtain an Engineer's degree in computer science</p>
 
@@ -76,6 +76,12 @@
                 <span>2015 - 2017</span>
                 <p>Two years preparatory course focused on maths and physics for enrolment in one of the higher
                     engineering schools </p>
+            </div>
+            <div class="event">
+                <h3>Baccalaureate</h3>
+                <h4>Lycée Moulay Mohamed Ben Abdellah - Larache</h4>
+                <span>2012 - 2015</span>
+                <p>Mathematical Sciences</p>
             </div>
 
         </div>
