--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div>
         <h1>Abir El Halimi</h1>
-        <h2>Software Engineer & Full Stack Developer</h2>
+        <h2>Software Engineer</h2>
     </div>
     <div class="links">
         <a href="https://github.com/abirelhalimi" target="_blank">
@@ -57,9 +57,9 @@
                 <li>PostgreSQL</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/foodies'">Github repo
+            <!--            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>-->
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/foodies" target="_blank">Github repo</a>
             </button>
         </div>
 
@@ -80,9 +80,9 @@
                 <li>Swagger</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/daychissaf/donation-app'">Github repo
+            <!--            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>-->
+            <button class="btn-dark-outline">
+                <a href="https://github.com/daychissaf/donation-app" target="_blank">Github repo</a>
             </button>
 
         </div>
@@ -105,9 +105,9 @@
                 <li>CSS</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/car_tracking'">Github repo
+            <!--            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>-->
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/car_tracking" target="_blank">Github repo</a>
             </button>
 
         </div>
@@ -128,11 +128,11 @@
                 <li>CSS</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline"
-                    onclick="window.location.href='https://lvbeethoven.netlify.app/'">Live site
+            <button class="btn-dark-outline">
+                <a href="https://lvbeethoven.netlify.app/" target="_blank">Live site</a>
             </button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/tribute-page'">Github repo
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/tribute-page" target="_blank">Github repo</a>
             </button>
 
         </div>
@@ -155,11 +155,11 @@
                 <li>TypeScript</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline"
-                    onclick="window.location.href='https://aquoteaday.netlify.app/'">Live site
+            <button class="btn-dark-outline">
+                <a href="https://aquoteaday.netlify.app/" target="_blank">Live site</a>
             </button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/random-quote-machine'">Github repo
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/random-quote-machine" target="_blank">Github repo</a>
             </button>
 
         </div>
@@ -180,11 +180,11 @@
                 <li>CSS</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline"
-                    onclick="window.location.href='https://covid19-news-ar.netlify.app/'">Live site
+            <button class="btn-dark-outline">
+                <a href="https://covid19-news-ar.netlify.app/" target="_blank">Live site</a>
             </button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/covid19'">Github repo
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/covid19" target="_blank">Github repo</a>
             </button>
 
         </div>
@@ -205,9 +205,9 @@
                 <li>Java</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/questions-game'">Github repo
+            <!--            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>-->
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/questions-game" target="_blank">Github repo</a>
             </button>
 
         </div>
@@ -230,9 +230,9 @@
                 <li>PostgreSQL</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/e-ensias'">Github repo
+            <!--            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>-->
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/e-ensias" target="_blank">Github repo</a>
             </button>
 
         </div>
@@ -253,11 +253,11 @@
                 <li>JavaScript</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline"
-                    onclick="window.location.href='https://abirelhalimi.me'">Live site
+            <button class="btn-dark-outline">
+                <a href="https://abirelhalimi.me" target="_blank">Live site</a>
             </button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/abirelhalimi.github.io'">Github repo
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/abirelhalimi.github.io" target="_blank">Github repo</a>
             </button>
 
         </div>
@@ -280,9 +280,9 @@
                 <li>PlantUML</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/MDE'">Github repo
+            <!--            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>-->
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/MDE" target="_blank">Github repo</a>
             </button>
 
         </div>
@@ -302,9 +302,9 @@
                 <li>PostgreSQL</li>
             </ul>
             <p><br></p>
-            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>
-            <button class="btn-dark-outline" type="button"
-                    onclick="window.location.href='https://github.com/abirelhalimi/gaming-center'">Github repo
+            <!--            <button type="button" class="btn-dark-outline" style="cursor: not-allowed;">Live site</button>-->
+            <button class="btn-dark-outline">
+                <a href="https://github.com/abirelhalimi/gaming-center" target="_blank">Github repo</a>
             </button>
 
         </div>
