--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div>
         <h1>Abir El Halimi</h1>
-        <h2>Software Engineer & Full Stack Developer</h2>
+        <h2>Software Engineer</h2>
     </div>
     <div class="links">
         <a href="https://github.com/abirelhalimi" target="_blank">
@@ -41,7 +41,8 @@
 
     <div class="content">
 
-        <button onclick="window.location.href='preview.html';target='_blank'">Preview Resume
+        <button>
+            <a href="preview.html" target="_blank">Preview Resume</a>
         </button>
 
         <div class="timeline">
